# ae470-realsense-sdk

./: .gitignore  CMakeLists.txt  README.md
CMake/: external_libcurl.cmake  external_libzmq.cmake  global_config.cmake  install_config.cmake  lrs_options.cmake
common/fw/: CMakeLists.txt
config/: librealsense-gl.pc.in  librealsense.pc.in  network.json
examples/: CMakeLists.txt
examples/C/color/: CMakeLists.txt
examples/C/depth/: CMakeLists.txt
examples/C/distance/: CMakeLists.txt
examples/align/: CMakeLists.txt
examples/align-advanced/: CMakeLists.txt
examples/ar-advanced/: CMakeLists.txt
examples/ar-basic/: CMakeLists.txt
examples/callback/: CMakeLists.txt
examples/capture/: CMakeLists.txt
examples/capture-safe/: CMakeLists.txt  lips-capture-safe.cpp
examples/cmake/: CMakeLists.txt
examples/gl/: CMakeLists.txt
examples/hdr/: CMakeLists.txt
examples/hello-realsense/: CMakeLists.txt
examples/measure/: CMakeLists.txt
examples/motion/: CMakeLists.txt
examples/multicam/: CMakeLists.txt
examples/pointcloud/: CMakeLists.txt
examples/pose/: CMakeLists.txt
examples/pose-and-image/: CMakeLists.txt
examples/pose-apriltag/: CMakeLists.txt
examples/pose-predict/: CMakeLists.txt
examples/post-processing/: CMakeLists.txt
examples/record-playback/: CMakeLists.txt
examples/save-to-disk/: CMakeLists.txt
examples/sensor-control/: CMakeLists.txt
examples/software-device/: CMakeLists.txt
examples/tracking-and-depth/: CMakeLists.txt
examples/trajectory/: CMakeLists.txt
include/librealsense2/: lips_ae4xx_dm.h
src/: global_timestamp_reader.cpp
src/compression/: CMakeLists.txt
src/ds5/: ds5-device.cpp  ds5-factory.cpp  ds5-motion.h
src/ethernet/: CMakeLists.txt
src/gl/: CMakeLists.txt
src/linux/: CMakeLists.txt
src/mf/: CMakeLists.txt
tools/: CMakeLists.txt
tools/ae400-toolkit/: CMakeLists.txt  linux_scan.cpp  linux_scan.h  lips_ae400_toolkit.cpp  win_scan.cpp  win_scan.h  write_html.hpp
tools/ae470-reboot/: CMakeLists.txt  ae470-reboot.cpp
tools/ae4xx-ntpsync/: CMakeLists.txt  main.cpp
tools/ae4xx-ntpsync/sntpd/: config.h
tools/ae4xx-ntpsync/sntpd/src/: sntpd.c  sntpd.c.debug
tools/benchmark/: CMakeLists.txt
tools/convert/: CMakeLists.txt
tools/data-collect/: CMakeLists.txt
tools/depth-quality/: CMakeLists.txt
tools/enumerate-devices/: CMakeLists.txt
tools/fw-logger/: CMakeLists.txt
tools/fw-update/: CMakeLists.txt
tools/realsense-viewer/: CMakeLists.txt
tools/recorder/: CMakeLists.txt
tools/rosbag-inspector/: CMakeLists.txt
tools/rs-server/: CMakeLists.txt
tools/terminal/: CMakeLists.txt
unit-tests/: CMakeLists.txt
unit-tests/internal/: CMakeLists.txt
wrappers/: CMakeLists.txt
wrappers/dlib/: CMakeLists.txt
wrappers/dlib/face/: CMakeLists.txt
wrappers/matlab/: CMakeLists.txt
wrappers/nodejs/: CMakeLists.txt
wrappers/opencv/: CMakeLists.txt
wrappers/opencv/depth-filter/: CMakeLists.txt
wrappers/opencv/dnn/: CMakeLists.txt
wrappers/opencv/grabcuts/: CMakeLists.txt
wrappers/opencv/imshow/: CMakeLists.txt
wrappers/opencv/kinfu/: CMakeLists.txt
wrappers/opencv/latency-tool/: CMakeLists.txt
wrappers/opencv/rotate-pointcloud/: CMakeLists.txt
wrappers/openvino/: CMakeLists.txt
wrappers/openvino/dnn/: CMakeLists.txt
wrappers/openvino/face/: CMakeLists.txt
wrappers/pcl/: CMakeLists.txt
wrappers/pcl/pcl/: CMakeLists.txt
wrappers/pcl/pcl-color/: CMakeLists.txt
wrappers/python/: CMakeLists.txt
wrappers/python/docs/: CMakeLists.txt
